--- a/d2rc5iceetg.html
+++ b/d2rc5iceetg.html
@@ -1,1 +1,1 @@
-<div><table><tbody><tr><td><div>Objawy</div><div>Ataksja móżdżkowa</div><div>Ataksja czuciowa</div><div>czucie głębokie</div><div>niezaburzone</div><div>zaburzone</div><div>oczopląs</div><div>tak</div><div>nie</div><div>zaburzenia mowy</div><div>tak</div><div>nie</div><div>zaburzenia postawy</div><div>tak</div><div>nie</div><div>odruchy głębokie</div><div>mogą być osłabione</div><div>osłabione lub zniesione</div><div>wyrównanie przez kontrolę wzroku</div><div>nie</div><div>tak</div></td></tr></tbody></table></div>
+<div></div>
