--- a/untitled.html
+++ b/untitled.html
@@ -1,1 +1,1 @@
-<div>Patomechanizm i&nbsp;przyczyny<span></span></div>
+<h2 data-label="135517" class="ltx_title_subsection">Patomechanizm i&nbsp;przyczyny<span></span></h2>
