--- a/j1jtaabuvdc.html
+++ b/j1jtaabuvdc.html
@@ -1,1 +1,1 @@
-<div>Różnicowanie ataksji móżdżkowej i&nbsp;czuciowej&nbsp;→<a href="https://www.mp.pl/interna/table/B16.1.1-1.">tab.&nbsp;1.1-1</a>.</div>
+<div>Różnicowanie ataksji móżdżkowej i&nbsp;czuciowej&nbsp;</div>
