--- a/s9son3fbtsc.html
+++ b/s9son3fbtsc.html
@@ -1,1 +1,1 @@
-<div></div><div>Zaburzenie koordynacji ruchowej, utrudniające płynne i&nbsp;dokładne wykonywanie ruchów, spowodowane procesami chorobowymi prowadzącymi do&nbsp;uszkodzenia móżdżku (ataksja móżdżkowa) lub dróg dośrodkowych przewodzących czucie głębokie na&nbsp;poziomie nerwów obwodowych lub sznurów tylnych rdzenia kręgowego (ataksja czuciowa).</div>
+<div>\begin{table} \centering</div>
