--- a/pchhe8a9qa8.html
+++ b/pchhe8a9qa8.html
@@ -1,1 +1,1 @@
-<div>\end{table}</div>
+<div>\end{table}</div><div>Zaburzenie koordynacji ruchowej, utrudniające płynne i&nbsp;dokładne wykonywanie ruchów, spowodowane procesami chorobowymi prowadzącymi do&nbsp;uszkodzenia móżdżku (ataksja móżdżkowa) lub dróg dośrodkowych przewodzących czucie głębokie na&nbsp;poziomie nerwów obwodowych lub sznurów tylnych rdzenia kręgowego (ataksja czuciowa).</div>
