--- a/gqie4lhb4kg.html
+++ b/gqie4lhb4kg.html
@@ -1,1 +1,1 @@
-<div>II &amp; znaczne ograniczenie aktywności fizycznej i dolegliwości w spoczynku) powodują pojawienie się w/w objawów \\ \hline</div>
+<div>&nbsp;</div>
