--- a/0himm6ook6g.html
+++ b/0himm6ook6g.html
@@ -1,1 +1,1 @@
-<div>&nbsp;II &amp; niewielkie ograniczenie aktywności fizycznej, bez dolegliwości w spoczynku, zwykłe codzienne czynności powodują pojawienie się w/w objawów \\ \hline</div>
+<div>.</div>
