--- a/332q611nqs4.html
+++ b/332q611nqs4.html
@@ -1,1 +1,1 @@
-<div>I &amp; zwykłe codzienne czynności nie powodują uczucia duszności, zmęczenia, bicia serca \\ \hline</div>
+<div>wodują uczucia duszności, zmęczenia, bicia serca \\ \hline</div>
